--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
                 </h1>
                 <nav>      
                 <ul class="gnb clearfix">
-                    <li><a href="#">BRANDING</a></li>
-                    <li><a href="#">ABOUT</a></li>
+                    <li><a href="file:///C:/Users/%EB%B0%95%EC%84%A0%EC%95%84/Desktop/%ED%8F%AC%ED%8F%B4(github)/Branding-(g)/index.html">BRANDING</a></li>
+                    <li><a href="file:///C:/Users/%EB%B0%95%EC%84%A0%EC%95%84/Desktop/%ED%8F%AC%ED%8F%B4(github)/About-me/index.html">ABOUT</a></li>
                     <li><a href="#">PORTPOLIO</a></li>
                     <li><a href="#">PROCESS</a></li>
-                    <li><a href="#">EXPERIENCE</a></li>
+                    <li><a href="file:///C:/Users/%EB%B0%95%EC%84%A0%EC%95%84/Desktop/%ED%8F%AC%ED%8F%B4(github)/Experience-(g)/index.html">EXPERIENCE</a></li>
                 </ul>
                 </nav>
             </div>
