--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </div>
                 <h1>
                     <li><a href="#">
-                        <img src="images/세잎 찐이야.png" alt="로고이미지">
+                        <img src="images/로고 세잎.png" alt="로고이미지">
                     </a></li>
                 </h1>
                 <nav>      
