--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
                     value="">
                 </div>
                 <h1>
-                    <li><a href="#">
+                    <li><a href="https://park-seona.github.io/Main/">
                         <img src="images/로고 세잎.png" alt="로고이미지">
                     </a></li>
                 </h1>
                 <nav>      
                 <ul class="gnb clearfix">
-                    <li><a href="file:///C:/Users/%EB%B0%95%EC%84%A0%EC%95%84/Desktop/%ED%8F%AC%ED%8F%B4(github)/Branding-(g)/index.html">BRANDING</a></li>
-                    <li><a href="file:///C:/Users/%EB%B0%95%EC%84%A0%EC%95%84/Desktop/%ED%8F%AC%ED%8F%B4(github)/About-me/index.html">ABOUT</a></li>
-                    <li><a href="#">PORTPOLIO</a></li>
-                    <li><a href="#">PROCESS</a></li>
-                    <li><a href="file:///C:/Users/%EB%B0%95%EC%84%A0%EC%95%84/Desktop/%ED%8F%AC%ED%8F%B4(github)/Experience-(g)/index.html">EXPERIENCE</a></li>
+                    <li><a href="https://park-seona.github.io/Branding/">BRANDING</a></li>
+                    <li><a href="https://park-seona.github.io/About-me/">ABOUT</a></li>
+                    <li><a href="https://park-seona.github.io/Portpolio/">PORTPOLIO</a></li>
+                    <li><a href="https://park-seona.github.io/Process/">PROCESS</a></li>
+                    <li><a href="https://park-seona.github.io/Experience/">EXPERIENCE</a></li>
                 </ul>
                 </nav>
             </div>
