--- a/index.html
+++ b/index.html
@@ -31,10 +31,6 @@
                     <p>About me</p>
                 </ul>
                 </ul>
-                <div class="three_btn">
-                    <input type="button" class="btn"
-                    value="">
-                </div>
                 <h1>
                     <li><a href="https://park-seona.github.io/Main/">
                         <img src="images/로고 세잎.png" alt="로고이미지">
@@ -44,7 +40,7 @@
                 <ul class="gnb clearfix">
                     <li><a href="https://park-seona.github.io/Branding/">BRANDING</a></li>
                     <li><a href="https://park-seona.github.io/About-me/">ABOUT</a></li>
-                    <li><a href="https://park-seona.github.io/Portpolio/">PORTPOLIO</a></li>
+                    <li><a href="https://park-seona.github.io/Portpolio/">PORTFOLIO</a></li>
                     <li><a href="https://park-seona.github.io/Process/">PROCESS</a></li>
                     <li><a href="https://park-seona.github.io/Experience/">EXPERIENCE</a></li>
                 </ul>
