--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
         </div>
         <div class="about_more">
             <ul class="see_txt">
-                <li><a href="#">see more <p>PORTFOLIO</p></a></li>
+                <li><a href="https://park-seona.github.io/Portpolio/">see more <p>PORTFOLIO</p></a></li>
             </ul>
         </div>
     </div>
