--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="header_box">
                 <div class="me_img">
                     <li><a href="#">
-                        <img src="images/내 옆면 독사진.png" alt="내옆면독사진">
+                        <img src="images/me2.jpg" alt="내옆면독사진">
                     </a></li>
                 </div>
                 <ul class="about_txt">
@@ -291,7 +291,7 @@
             <h2 class="clearfix">
                 <li><a href="#">Possibility</a></li>
             </h2>
-            <div class="txt01">
+            <div class="txt01" data-aos="fade-right" data-aos-duration="700" data-aos-delay="300">
                 <h2>
                     <li><a href="#">01</a></li>
                 </h2>
@@ -306,10 +306,10 @@
                     </li>
                 </ul>
             </div>
-            <div class="number1">
+            <div class="number1" data-aos="fade-right" data-aos-duration="700" data-aos-delay="300">
                 <li><a href="#">95%</a></li>
             </div>
-            <div class="txt02">
+            <div class="txt02" data-aos="fade-right" data-aos-duration="700" data-aos-delay="600">
                 <h2>
                     <li><a href="#">02</a></li>
                 </h2>
@@ -324,10 +324,10 @@
                     </li>
                 </ul>
             </div>
-            <div class="number2">
+            <div class="number2" data-aos="fade-right" data-aos-duration="700" data-aos-delay="600">
                 <li><a href="#">85%</a></li>
             </div>
-            <div class="txt03">
+            <div class="txt03" data-aos="fade-right" data-aos-duration="700" data-aos-delay="900">
                 <h2>
                     <li><a href="#">03</a></li>
                 </h2>
@@ -335,16 +335,16 @@
                 <ul class="bar03">
                     <li><a href="#"></a></li>
                 </ul>
-                <ul class="write3">
+                <ul class="write3" data-aos="fade-right" data-aos-duration="700" data-aos-delay="900">
                     <li>
                         한번 일을 시작하면 정해진 기간 내에 끝까지 몰두하며 열정적으로 성실히 수행합니다.
                     </li>
                 </ul>
             </div>
-            <div class="number3">
+            <div class="number3" data-aos="fade-right" data-aos-duration="700" data-aos-delay="900">
                 <li><a href="#">95%</a></li>
             </div>
-            <div class="txt04">
+            <div class="txt04" data-aos="fade-right" data-aos-duration="700" data-aos-delay="1200">
                 <h2>
                     <li><a href="#">04</a></li>
                 </h2>
@@ -352,13 +352,13 @@
                 <ul class="bar04">
                     <li><a href="#"></a></li>
                 </ul>
-                <ul class="write4">
+                <ul class="write4" data-aos="fade-right" data-aos-duration="700" data-aos-delay="1200">
                     <li>
                         오늘의 ‘나’보다 더 멋진 내일의 ‘나’가 되기 위해 끊임없이 도전하며 성장해나갑니다.
                     </li>
                 </ul>
             </div>
-            <div class="number4">
+            <div class="number4" data-aos="fade-right" data-aos-duration="700" data-aos-delay="1200">
                 <li><a href="#">95%</a></li>
             </div>
         </div>
@@ -393,7 +393,9 @@
                 <li><a href="#">Vision</a></li>
             </h2>
             <div class="seona_img clearfix">
-                <li><a href="#"></a></li>
+                <li><a href="#">
+                    <img src="images/me3.jpg" alt="흑백독사진">
+                </a></li>
             </div>
             <div class="future_con clearfix">
                 <div class="year01 clearfix">
