--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="header_box">
                 <div class="me_img">
                     <li><a href="#">
-                        <img src="images/me2.jpg" alt="내옆면독사진">
+                        <img src="images/me4.jpg" alt="내옆면독사진">
                     </a></li>
                 </div>
                 <ul class="about_txt">
@@ -352,7 +352,7 @@
                 <ul class="bar04">
                     <li><a href="#"></a></li>
                 </ul>
-                <ul class="write4" data-aos="fade-right" data-aos-duration="700" data-aos-delay="1200">
+                <ul class="write4">
                     <li>
                         오늘의 ‘나’보다 더 멋진 내일의 ‘나’가 되기 위해 끊임없이 도전하며 성장해나갑니다.
                     </li>
