--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="header_box">
                 <div class="me_img">
                     <li><a href="#">
-                        <img src="images/me4.jpg" alt="내옆면독사진">
+                        <img src="images/me4.jpg" alt="옆면독사진">
                     </a></li>
                 </div>
                 <ul class="about_txt">
