--- a/index.html
+++ b/index.html
@@ -105,76 +105,76 @@
             <div class="charac_cir">Character</div>
             <div class="color_cir">Color</div>
             <div class="top_txt">
-                <ul class="favor">
+                <ul class="favor" data-aos="fade-left" data-aos-duration="700">
                     <li>취미</li>
                 </ul>
-                <ul class="favor1">
+                <ul class="favor1" data-aos="fade-left" data-aos-duration="700">
                     <li>디자인, 전시회 관람</li>
                 </ul>
-                <ul class="favor2">
+                <ul class="favor2" data-aos="fade-left" data-aos-duration="700">
                     <li>PPT 템플릿 만들기</li>
                 </ul>
-                <ul class="favor3">
+                <ul class="favor3" data-aos="fade-left" data-aos-duration="700">
                     <li>영화&음악 감상</li>
                 </ul>
-                <ul class="favor4">
+                <ul class="favor4" data-aos="fade-left" data-aos-duration="700">
                     <li>여행, 걷기 운동</li>
                 </ul>
-                <ul class="favor5">
+                <ul class="favor5" data-aos="fade-left" data-aos-duration="700">
                     <li>미니어쳐 만들기</li>
                 </ul>
-                <ul class="charac1">
+                <ul class="charac1" data-aos="fade-up" data-aos-duration="700" data-aos-delay="200">
                     <li>성격</li>
                 </ul>
-                <ul class="charac1_1">
+                <ul class="charac1_1" data-aos="fade-up" data-aos-duration="700" data-aos-delay="200">
                     <li>활발하고 자신감 넘치는</li>
                 </ul>
-                <ul class="charac1_2">
+                <ul class="charac1_2" data-aos="fade-up" data-aos-duration="700" data-aos-delay="200">
                     <li>긍정적이고 낙천적인</li>
                 </ul>
-                <ul class="charac1_3">
+                <ul class="charac1_3" data-aos="fade-up" data-aos-duration="700" data-aos-delay="200">
                     <li>따뜻하고 배려하는</li>
                 </ul>
-                <ul class="charac2">
+                <ul class="charac2" data-aos="fade-up" data-aos-duration="700" data-aos-delay="200">
                     <li>첫인상</li>
                 </ul>
-                <ul class="charac2_1">
+                <ul class="charac2_1" data-aos="fade-up" data-aos-duration="700" data-aos-delay="200">
                     <li>밝고 귀여운</li>
                 </ul>
-                <ul class="charac2_2">
+                <ul class="charac2_2" data-aos="fade-up" data-aos-duration="700" data-aos-delay="200">
                     <li>편안하고 재치있는</li>
                 </ul>
-                <ul class="charac2_3">
+                <ul class="charac2_3" data-aos="fade-up" data-aos-duration="700" data-aos-delay="200">
                     <li>차갑고 도도해보이는</li>
                 </ul>
-                <ul class="charac3">
+                <ul class="charac3" data-aos="fade-up" data-aos-duration="700" data-aos-delay="200">
                     <li>ESFP</li>
                 </ul>
-                <ul class="charac3_1">
+                <ul class="charac3_1" data-aos="fade-up" data-aos-duration="700" data-aos-delay="200">
                     <li>자유로운 영혼</li>
                 </ul>
-                <ul class="charac3_2">
+                <ul class="charac3_2" data-aos="fade-up" data-aos-duration="700" data-aos-delay="200">
                     <li>웰시코기</li>
                 </ul>
-                <ul class="color">
+                <ul class="color" data-aos="fade-up" data-aos-duration="700" data-aos-delay="400">
                     <li>밝고 자신감있는</li>
                 </ul>
-                <ul class="color1_1">
+                <ul class="color1_1" data-aos="fade-up" data-aos-duration="700" data-aos-delay="400">
                     <li>노란색</li>
                 </ul>
-                <ul class="color1_2">
+                <ul class="color1_2" data-aos="fade-up" data-aos-duration="700" data-aos-delay="400">
                     <li>파란색</li>
                 </ul>
-                <ul class="color1_3">
+                <ul class="color1_3" data-aos="fade-up" data-aos-duration="700" data-aos-delay="400">
                     <li>연두색</li>
                 </ul>
-                <ul class="color2">
+                <ul class="color2" data-aos="fade-up" data-aos-duration="700" data-aos-delay="400">
                     <li>청량한</li>
                 </ul>
-                <ul class="color2_1">
+                <ul class="color2_1" data-aos="fade-up" data-aos-duration="700" data-aos-delay="400">
                     <li>노란색</li>
                 </ul>
-                <ul class="color2_2">
+                <ul class="color2_2" data-aos="fade-up" data-aos-duration="700" data-aos-delay="400">
                     <li>파란색</li>
                 </ul>
             </div>
@@ -201,88 +201,88 @@
             <hr class="exper_cero" style="border-left: solid 1px rgba(177, 205, 163, 0.6);">
             
             <div class="bottom_txt">
-                <ul class="goal1">
+                <ul class="goal1" data-aos="fade-down" data-aos-duration="700">
                     <li>디자인</li>
                 </ul>
-                <ul class="goal1_1">
+                <ul class="goal1_1" data-aos="fade-down" data-aos-duration="700">
                     <li>소통하고 신뢰하는</li>
                 </ul>
-                <ul class="goal1_2">
+                <ul class="goal1_2" data-aos="fade-down" data-aos-duration="700">
                     <li>섬세하고 배려하는</li>
                 </ul>
-                <ul class="goal1_3">
+                <ul class="goal1_3" data-aos="fade-down" data-aos-duration="700">
                     <li>행복을 나누는</li>
                 </ul>
-                <ul class="goal1_4">
+                <ul class="goal1_4" data-aos="fade-down" data-aos-duration="700">
                     <li>UX/UI&웹디자이너</li>
                 </ul>
-                <ul class="goal2">
+                <ul class="goal2" data-aos="fade-down" data-aos-duration="700">
                     <li>자기계발</li>
                 </ul>
-                <ul class="goal2_1">
+                <ul class="goal2_1" data-aos="fade-down" data-aos-duration="700">
                     <li>운동, 실내테니스</li>
                 </ul>
-                <ul class="goal2_2">
+                <ul class="goal2_2" data-aos="fade-down" data-aos-duration="700">
                     <li>배드민턴, 자전거</li>
                 </ul>
-                <ul class="goal2_3">
+                <ul class="goal2_3" data-aos="fade-down" data-aos-duration="700">
                     <li>정보처리기사</li>
                 </ul>
-                <ul class="goal2_4">
+                <ul class="goal2_4" data-aos="fade-down" data-aos-duration="700">
                     <li>컴퓨터그래픽스운용기능사</li>
                 </ul>
-                <ul class="study1">
+                <ul class="study1" data-aos="fade-down" data-aos-duration="700" data-aos-delay="200">
                     <li>경영학 전공</li>
                 </ul>
-                <ul class="study1_1">
+                <ul class="study1_1" data-aos="fade-down" data-aos-duration="700" data-aos-delay="200">
                     <li>2년 동안 성적 우수 장학금 수여</li>
                 </ul>
-                <ul class="study2">
+                <ul class="study2" data-aos="fade-down" data-aos-duration="700" data-aos-delay="200">
                     <li>자격증</li>
                 </ul>
-                <ul class="study2_1">
+                <ul class="study2_1" data-aos="fade-down" data-aos-duration="700" data-aos-delay="200">
                     <li>MOS PPT</li>
                 </ul>
-                <ul class="study2_2">
+                <ul class="study2_2" data-aos="fade-down" data-aos-duration="700" data-aos-delay="200">
                     <li>MOS EXCEL</li>
                 </ul>
-                <ul class="study2_3">
+                <ul class="study2_3" data-aos="fade-down" data-aos-duration="700" data-aos-delay="200">
                     <li>웹디자인 기능사</li>
                 </ul>
-                <ul class="study2_4">
+                <ul class="study2_4" data-aos="fade-down" data-aos-duration="700" data-aos-delay="200">
                     <li>ACP 포토샵</li>
                 </ul>
-                <ul class="study2_5">
+                <ul class="study2_5" data-aos="fade-down" data-aos-duration="700" data-aos-delay="200">
                     <li>ACP 일러스트</li>
                 </ul>
-                <ul class="exper1">
+                <ul class="exper1" data-aos="fade-down" data-aos-duration="700" data-aos-delay="400">
                     <li>유럽 여행</li>
                 </ul>
-                <ul class="exper1_1">
+                <ul class="exper1_1" data-aos="fade-down" data-aos-duration="700" data-aos-delay="400">
                     <li>소매치기</li>
                 </ul>
-                <ul class="exper1_2">
+                <ul class="exper1_2" data-aos="fade-down" data-aos-duration="700" data-aos-delay="400">
                     <li>길 잃어버리기</li>
                 </ul>
-                <ul class="exper1_3">
+                <ul class="exper1_3" data-aos="fade-down" data-aos-duration="700" data-aos-delay="400">
                     <li>더위 먹기</li>
                 </ul>
-                <ul class="exper2">
+                <ul class="exper2" data-aos="fade-down" data-aos-duration="700" data-aos-delay="400">
                     <li>입시 미술</li>
                 </ul>
-                <ul class="exper2_1">
+                <ul class="exper2_1" data-aos="fade-down" data-aos-duration="700" data-aos-delay="400">
                     <li>미대입시 2년</li>
                 </ul>
-                <ul class="exper2_2">
+                <ul class="exper2_2" data-aos="fade-down" data-aos-duration="700" data-aos-delay="400">
                     <li>각종 대회 참여</li>
                 </ul>
-                <ul class="exper3">
+                <ul class="exper3" data-aos="fade-down" data-aos-duration="700" data-aos-delay="400">
                     <li>중국 회화</li>
                 </ul>
-                <ul class="exper3_1">
+                <ul class="exper3_1" data-aos="fade-down" data-aos-duration="700" data-aos-delay="400">
                     <li>취미로 시작</li>
                 </ul>
-                <ul class="exper3_2">
+                <ul class="exper3_2" data-aos="fade-down" data-aos-duration="700" data-aos-delay="400">
                     <li>중2 - 고3 까지</li>
                 </ul>
             </div>
@@ -366,22 +366,22 @@
             <h2>
                 <li><a href="#">Design skills</a></li>
             </h2>
-            <div class="skill_cir1">90%</div>
+            <div class="skill_cir1" data-aos="fade-right" data-aos-duration="700">90%</div>
             <ul class="cir1_txt clearfix">
-                <p>Photoshop</p>
-                <li>
+                <p data-aos="fade-right" data-aos-duration="700">Photoshop</p>
+                <li data-aos="fade-right" data-aos-duration="700">
                     이미지 보정과 편집, 합성과 리터칭 등이 가능하며 필터 및 효과를 다양하게 응용하여 원하는 결과물을 도출해낼 수 있습니다.           
                 </li>
             </ul>
-            <div class="skill_cir2">90%</div>
-            <ul class="cir2_txt">
+            <div class="skill_cir2" data-aos="fade-right" data-aos-duration="700" data-aos-delay="200">90%</div>
+            <ul class="cir2_txt" data-aos="fade-right" data-aos-duration="700" data-aos-delay="200">
                 <p>Illustrater</p>
                 <li>
                     벡터 기반의 로고 및 배너와 아이콘을 제작할 수 있으며 펜툴을 이용한 간단한 일러스트 요소 드로잉 작업이 가능합니다. 
                 </li>
             </ul>
-            <div class="skill_cir3">80%</div>
-            <ul class="cir3_txt">
+            <div class="skill_cir3" data-aos="fade-right" data-aos-duration="700" data-aos-delay="400">80%</div>
+            <ul class="cir3_txt" data-aos="fade-right" data-aos-duration="700" data-aos-delay="400">
                 <p>Visual studio</p>
                 <li>
                     HTML의 기본구조를 이해하며 CSS와 Java Script를 이용한 웹사이트 레이아웃 구현과 간단한 퍼블리싱이 가능합니다.
