--- a/index.html
+++ b/index.html
@@ -54,14 +54,8 @@
                 </a></li>
             </ul>
             <hr class="designer_hr" width="50px" height="3px" style="border-color: #264F2A;">
-            <div class="designer_ex1" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
+            <div class="designer_ex1" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="300">
                 <li>밝고 긍정적인</li>
-            </div>
-            <div class="designer_ex2" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="700">
-                <li>낙천적인</li>
-            </div>
-            <div class="designer_ex3" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1100">
-                <li>변화를 추구하는</li>
             </div>
             <ul class="designer clearfix">
                 <li>디자이너</li>
