--- a/index.html
+++ b/index.html
@@ -66,9 +66,15 @@
             <ul class="end clearfix">
                 <li>입니다.</li>
             </ul>
-            <div class="me_box"></div>
-            <div class="me2_box"></div>
-            <div class="me3_box"></div>
+            <div class="me_box">
+                <img src="images/about1.png" alt="나1">
+            </div>
+            <div class="me2_box">
+                <img src="images/about2.png" alt="나2">
+            </div>
+            <div class="me3_box">
+                <img src="images/about3.png" alt="나3">
+            </div>
             <h1>
                 <li><a href="#">As a designer</a></li>
             </h1>
