--- a/index.html
+++ b/index.html
@@ -319,8 +319,8 @@
                 </ul>
                 <ul class="write2">
                     <li>
-                        어릴 적부터 디자인에 대해 관심도가 높아 틈틈이 교외에서 디자인 강의를 수강하며 전문적으로 
-                        역량을 키우기위해 끊임없이 웹디자인 & UX/UI디자인 공부를 해왔습니다.  
+                        어릴 적부터 디자인에 대해 관심도가 높아 틈틈이 스스로 저의 발전을 위해 독학으로 자격증
+                        <br>을 준비해 취득했으며 전문적으로 역량을 키우기 위해 끊임없이 웹디자인&UX/UI디자인 연구를 해왔습니다.
                     </li>
                 </ul>
             </div>
@@ -354,7 +354,11 @@
                 </ul>
                 <ul class="write4">
                     <li>
-                        오늘의 ‘나’보다 더 멋진 내일의 ‘나’가 되기 위해 끊임없이 도전하며 성장해나갑니다.
+                        <!-- 오늘의 ‘나’보다 더 멋진 내일의 ‘나’가 되기 위해 끊임없이 도전하며 성장해나갑니다. -->
+                        어릴 적부터 많은 것에 도전을 하였습니다. 학창 시절에 미니어쳐 집 만드는 것에 관심이 많아 건축디자이너의 꿈을 갖게 
+                        되고 조금 더 전문적으로 배우고 싶어 약 2년간 미술 입시 생활을 했습니다. 대학에 입학하고 3학년때쯤 평소에  PPT 템플릿을 
+                        만드는 것이 취미였던 저는 웹디자이너가 되고 싶다는 목표의식을 갖고 웹디자인 기능사를 취득하기 위한 새로운 도전을 하게 되었습니다. 
+                        취득하는 과정에서 1번의 실패가 있었지만 포기 하지 않고 목표에 도달하기 위해 꾸준히 노력한 끝에 취득하게 되었습니다.
                     </li>
                 </ul>
             </div>
