--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="header_box">
                 <div class="me_img">
                     <li><a href="#">
-                        <img src="images/me4.jpg" alt="옆면독사진">
+                        <img src="images/내 옆면 독사진.png" alt="옆면독사진">
                     </a></li>
                 </div>
                 <ul class="about_txt">
@@ -354,7 +354,6 @@
                 </ul>
                 <ul class="write4">
                     <li>
-                        <!-- 오늘의 ‘나’보다 더 멋진 내일의 ‘나’가 되기 위해 끊임없이 도전하며 성장해나갑니다. -->
                         어릴 적부터 많은 것에 도전을 하였습니다. 학창 시절에 미니어쳐 집 만드는 것에 관심이 많아 건축디자이너의 꿈을 갖게 
                         되고 조금 더 전문적으로 배우고 싶어 약 2년간 미술 입시 생활을 했습니다. 대학에 입학하고 3학년때쯤 평소에  PPT 템플릿을 
                         만드는 것이 취미였던 저는 웹디자이너가 되고 싶다는 목표의식을 갖고 웹디자인 기능사를 취득하기 위한 새로운 도전을 하게 되었습니다. 
