--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="header_box">
                 <div class="me_img">
                     <li><a href="#">
-                        <img src="images/내 옆면 독사진.png" alt="옆면독사진">
+                        <img src="images/me_pic.png" alt="독사진">
                     </a></li>
                 </div>
                 <ul class="about_txt">
@@ -32,9 +32,9 @@
                 </ul>
                 </ul>
                 <h1>
-                    <li><a href="https://park-seona.github.io/Main/">
-                        <img src="images/로고 세잎.png" alt="로고이미지">
-                    </a></li>
+                    <a href="https://park-seona.github.io/Main/">
+                        <img src="images/logo.png" alt="로고">
+                    </a>
                 </h1>
                 <nav>      
                 <ul class="gnb clearfix">
@@ -50,7 +50,7 @@
         <div class="about_me">
             <ul class="green_stick">
                 <li><a href="#">
-                    <img src="images/about초록스티커.png" alt="스티커">
+                    <img src="images/green_sticker.png" alt="스티커">
                 </a></li>
             </ul>
             <hr class="designer_hr" width="50px" height="3px" style="border-color: #264F2A;">
@@ -84,7 +84,7 @@
         </div>
         <div class="aboutme">
             <h2 class="aboutme1 clearfix">
-                <li><a href="#">About me</a></li>
+                <a href="#">About me</a>
             </h2>
             <ul class="aboutme_txt clearfix">
                 <li><a href="#">
@@ -99,7 +99,7 @@
         </div>
         <div class="mind_map">
             <h2 class="clearfix">
-                <li><a href="#">Mind-map</a></li>
+                <a href="#">Mind-map</a>
             </h2>
             <div class="favor_cir">Favoriate</div>
             <div class="charac_cir">Character</div>
@@ -289,11 +289,11 @@
         </div>
         <div class="possibility">
             <h2 class="clearfix">
-                <li><a href="#">Possibility</a></li>
+                <a href="#">Possibility</a>
             </h2>
             <div class="txt01" data-aos="fade-right" data-aos-duration="700" data-aos-delay="300">
                 <h2>
-                    <li><a href="#">01</a></li>
+                    <a href="#">01</a>
                 </h2>
                 <p>커뮤니케이션 & 팀워크</p>
                 <ul class="bar01">
@@ -301,7 +301,7 @@
                 </ul>
                 <ul class="write1">
                     <li>
-                        학부에서 여러 팀 프로젝트 등을 통해 먼저 다가가는 것을 좋아하고 타인의 말을 존중하는 마음으로 경청합니다. 
+                        여러 팀 프로젝트 등을 통해 먼저 다가가는 것을 좋아하고 타인의 말을 존중하는 마음으로 경청합니다. 
                         주변 사람들의 분위기나 의도를 잘 파악하여 팀원들과의 원활하게 소통할 수 있습니다.   
                     </li>
                 </ul>
@@ -311,7 +311,7 @@
             </div>
             <div class="txt02" data-aos="fade-right" data-aos-duration="700" data-aos-delay="600">
                 <h2>
-                    <li><a href="#">02</a></li>
+                    <a href="#">02</a>
                 </h2>
                 <p>디자인스킬 & 전문역량</p>
                 <ul class="bar02">
@@ -329,7 +329,7 @@
             </div>
             <div class="txt03" data-aos="fade-right" data-aos-duration="700" data-aos-delay="900">
                 <h2>
-                    <li><a href="#">03</a></li>
+                    <a href="#">03</a>
                 </h2>
                 <p>책임감 & 성실성</p>
                 <ul class="bar03">
@@ -346,7 +346,7 @@
             </div>
             <div class="txt04" data-aos="fade-right" data-aos-duration="700" data-aos-delay="1200">
                 <h2>
-                    <li><a href="#">04</a></li>
+                    <a href="#">04</a>
                 </h2>
                 <p>도전정신 & 목표의식</p>
                 <ul class="bar04">
@@ -367,25 +367,25 @@
         </div>
         <div class="design_skill">
             <h2>
-                <li><a href="#">Design skills</a></li>
+                <a href="#">Design skills</a>
             </h2>
             <div class="skill_cir1" data-aos="fade-right" data-aos-duration="700">90%</div>
             <ul class="cir1_txt clearfix">
-                <p data-aos="fade-right" data-aos-duration="700">Photoshop</p>
+                <h3 data-aos="fade-right" data-aos-duration="700">Photoshop</h3>
                 <li data-aos="fade-right" data-aos-duration="700">
                     이미지 보정과 편집, 합성과 리터칭 등이 가능하며 필터 및 효과를 다양하게 응용하여 원하는 결과물을 도출해낼 수 있습니다.           
                 </li>
             </ul>
             <div class="skill_cir2" data-aos="fade-right" data-aos-duration="700" data-aos-delay="200">90%</div>
             <ul class="cir2_txt" data-aos="fade-right" data-aos-duration="700" data-aos-delay="200">
-                <p>Illustrater</p>
+                <h3>Illustrater</h3>
                 <li>
                     벡터 기반의 로고 및 배너와 아이콘을 제작할 수 있으며 펜툴을 이용한 간단한 일러스트 요소 드로잉 작업이 가능합니다. 
                 </li>
             </ul>
             <div class="skill_cir3" data-aos="fade-right" data-aos-duration="700" data-aos-delay="400">80%</div>
             <ul class="cir3_txt" data-aos="fade-right" data-aos-duration="700" data-aos-delay="400">
-                <p>Visual studio</p>
+                <h3>Visual studio</h3>
                 <li>
                     HTML의 기본구조를 이해하며 CSS와 Java Script를 이용한 웹사이트 레이아웃 구현과 간단한 퍼블리싱이 가능합니다.
                 </li>
@@ -393,7 +393,7 @@
         </div>
         <div class="vision">
             <h2>
-                <li><a href="#">Vision</a></li>
+                <a href="#">Vision</a>
             </h2>
             <div class="seona_img clearfix">
                 <li><a href="#">
@@ -406,10 +406,10 @@
                         <a href="#">1년,</a>
                     </h2>
                     <h2 class="year01_txt" data-aos="zoom-in" data-aos-duration="1500">
-                        <li>배우고 성장하는</li>
+                       배우고 성장하는
                     </h2>
                     <h2 class="year01_t">
-                        <li>신입 디자이너</li>
+                        신입 디자이너
                     </h2>
                     <ul class="year01_ex">
                         <li>
@@ -422,10 +422,10 @@
                         <a href="#">5년,</a>
                     </h2>
                     <h2 class="year03_txt" data-aos="zoom-in" data-aos-duration="1500">
-                        <li>자신만의 스타일이 있는</li>
+                        자신만의 스타일이 있는
                     </h2>
                     <h2 class="year03_t">
-                        <li>신입 디자이너</li>
+                        신입 디자이너
                     </h2>
                     <ul class="year03_ex">
                         <li>
@@ -438,10 +438,10 @@
                         <a href="#">10년,</a>
                     </h2>
                     <h2 class="year05_txt" data-aos="zoom-in" data-aos-duration="1500">
-                        <li>전문적이고 영감을 주는</li>
+                        전문적이고 영감을 주는
                     </h2>
                     <h2 class="year05_t">
-                        <li>신입 디자이너</li>
+                        신입 디자이너
                     </h2>
                     <ul class="year05_ex">
                         <li>
