--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                        배우고 성장하는
                     </h2>
                     <h2 class="year01_t">
-                        신입 디자이너
+                       디자이너
                     </h2>
                     <ul class="year01_ex">
                         <li>
@@ -425,7 +425,7 @@
                         자신만의 스타일이 있는
                     </h2>
                     <h2 class="year03_t">
-                        신입 디자이너
+                        디자이너
                     </h2>
                     <ul class="year03_ex">
                         <li>
@@ -441,7 +441,7 @@
                         전문적이고 영감을 주는
                     </h2>
                     <h2 class="year05_t">
-                        신입 디자이너
+                        디자이너
                     </h2>
                     <ul class="year05_ex">
                         <li>
